--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-home></app-home>
-<app-login></app-login>
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
