add search bar and card model

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,124 @@
   <!-- ========== MAIN CONTENT ========== -->
   <main id="content" role="main">
+<!-- Hero -->
+<div class="overflow-hidden">
+  <div class="container content-space-2">
+    <div class="w-lg-50 text-center mx-lg-auto">
+      <!-- Heading -->
+      <div class="mb-5">
+        <h1 class="display-4">Insights</h1>
+        <p>Stay in the know with insights from industry experts.</p>
+      </div>
+      <!-- End Heading -->
+
+      <form>
+        <div class="position-relative">
+          <!-- Input Card -->
+          <div class="input-card input-card-sm">
+            <div class="input-card-form">
+              <label for="searchForm" class="form-label visually-hidden">Search article</label>
+              <input type="text" class="form-control form-control-lg" id="searchForm" placeholder="Search article" aria-label="Search article">
+            </div>
+            <button type="button" class="btn btn-primary btn-lg"><i class="bi-search"></i></button>
+          </div>
+          <!-- End Input Card -->
+
+          <!-- SVG Shape -->
+          <figure class="position-absolute top-0 end-0 d-none d-sm-block zi-n1 mt-n7 me-n10" style="width: 4rem;">
+            <img class="img-fluid" src="../assets/svg/components/pointer-up.svg" alt="Image Description">
+          </figure>
+          <!-- End SVG Shape -->
+
+          <!-- SVG Shape -->
+          <figure class="position-absolute bottom-0 start-0 zi-n1 mb-n7" style="width: 12rem; margin-left: -10rem;">
+            <img class="img-fluid" src="../assets/svg/components/curved-shape.svg" alt="Image Description">
+          </figure>
+          <!-- End SVG Shape -->
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- End Hero -->
+
+<!-- Card Grid -->
+<div class="container content-space-1">
+  <!-- Heading -->
+  <div class="w-lg-65 text-center mx-lg-auto mb-5 mb-sm-7 mb-lg-10">
+    <h2>Less overhead, more collaboration</h2>
+    <p>Start with award-winning templates, then customize to fit your style and professional needs.</p>
+  </div>
+  <!-- End Heading -->
+
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div class="col mb-5 mb-md-0">
+      <!-- Card -->
+      <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
+        <div class="card-transition-zoom-item">
+          <img class="card-img" src="../assets/img/580x480/img1.jpg" alt="Image Description">
+        </div>
+
+        <div class="card-body">
+          <h4>Virtual Venue</h4>
+          <p class="card-text">Create an immersive attendee experience with interactive programming for both digital and onsite audiences</p>
+        </div>
+
+        <div class="card-footer">
+          <span class="card-link">Explore Virtual Venue</span>
+        </div>
+      </a>
+      <!-- End Card -->
+    </div>
+    <!-- End Col -->
+
+    <div class="col mb-5 mb-md-0">
+      <!-- Card -->
+      <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
+        <div class="card-pinned card-transition-zoom-item">
+          <img class="card-img" src="../assets/img/580x480/img2.jpg" alt="Image Description">
+          <span class="badge bg-dark text-white card-pinned-top-end">Sponsored</span>
+        </div>
+
+        <div class="card-body">
+          <h4>Studio by Htmlstream</h4>
+          <p class="card-text">Produce professional, reliable streams easily leveraging Htmlstream's innovative broadcast studio</p>
+        </div>
+
+        <div class="card-footer">
+          <span class="card-link">Explore Studio</span>
+        </div>
+      </a>
+      <!-- End Card -->
+    </div>
+    <!-- End Col -->
+
+    <div class="col">
+      <!-- Card -->
+      <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
+        <div class="card-transition-zoom-item">
+          <img class="card-img" src="../assets/img/580x480/img3.jpg" alt="Image Description">
+        </div>
+
+        <div class="card-body">
+          <h4>Onsite</h4>
+          <p class="card-text">Optimize your in-person experience with best-in-class capabilities like badge printing and lead retrieval</p>
+        </div>
+
+        <div class="card-footer">
+          <span class="card-link">Explore Onsite</span>
+        </div>
+      </a>
+      <!-- End Card -->
+    </div>
+    <!-- End Col -->
+  </div>
+  <!-- End Row -->
+</div>
+<!-- End Card Grid -->
+
+
+
+
     <!-- Hero -->
     <div class="container content-space-t-3">
       <div class="row justify-content-lg-between align-items-lg-center">
