http Client - update home - create interface article

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <nav class="js-mega-menu navbar-nav-wrap">
         <!-- Logo -->
-        <a class="navbar-brand" href="./index.html" aria-label="Unify">
+        <a class="navbar-brand" routerLink="home" aria-label="Unify">
           <img class="navbar-brand-logo" src="./assets/svg/logos/LogoV2.svg" alt="Logo L2i">
         </a>
         <!-- End Logo -->
