--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,94 @@
   <!-- ========== MAIN CONTENT ========== -->
   <main id="content" role="main">
+
+
+    <!-- Search -->
+    <div class="overflow-hidden content-space-t-2 ">
+      <div class="container content-space-1">
+        <div class="w-lg-50 text-center mx-lg-auto">
+          <!-- Heading -->
+          <div class="mb-5">
+            <h1 class="display-4">Livre de formation</h1>
+            <p>Le numérique vous interesse ? Ici vous trouverez tous nos livres.</p>
+          </div>
+          <!-- End Heading -->
+
+          <form>
+            <div class="position-relative">
+              <!-- Input Card -->
+              <div class="input-card input-card-sm">
+                <div class="input-card-form">
+                  <label for="searchForm" class="form-label visually-hidden">Quel livre cherchez-vous ?</label>
+                  <input type="text" class="form-control form-control-lg" id="searchForm" placeholder="Quel livre cherchez-vous ?" aria-label="Quel livre cherchez-vous ?">
+                </div>
+                <button type="button" class="btn btn-dark btn-lg"><i class="bi-search"></i></button>
+              </div>
+              <!-- End Input Card -->
+
+              <!-- SVG Shape -->
+              <figure class="position-absolute top-0 end-0 d-none d-sm-block zi-n1 mt-n7 me-n10" style="width: 4rem;">
+                <img class="img-fluid" src="../assets/svg/components/pointer-up.svg" alt="Image Description">
+              </figure>
+              <!-- End SVG Shape -->
+
+              <!-- SVG Shape -->
+              <figure class="position-absolute bottom-0 start-0 zi-n1 mb-n7" style="width: 12rem; margin-left: -10rem;">
+                <img class="img-fluid" src="../assets/svg/components/curved-shape.svg" alt="Image Description">
+              </figure>
+              <!-- End SVG Shape -->
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Search -->
+
+
+    <!-- Articles -->
+    <div class="container content-space-t-1">
+      <div class="row row-cols-1 row-cols-sm-2 gx-7">
+        <div *ngFor="let item of article">
+        <div class="col mb-7 mb-md-10">
+          <!-- Card -->      
+          <a class="card card-ghost h-100" href="../blog-article.html">
+            <div class="row">
+              <div class="col-lg-5 mb-3 mb-lg-0">
+                <img class="card-img" src="../assets/img/580x480/img14.jpg" alt="Image Description">
+              </div>
+              <!-- End Col -->
+              <div class="col-lg-7">
+                <h4>{{ item.title }}</h4>
+                <p class="card-text">Produce professional, reliable streams easily leveraging Htmlstream's innovative broadcast studio</p>
+                <span class="card-link">Read more</span>
+              </div>
+              <!-- End Col -->
+            </div>
+            <!-- End Row -->
+          </a>
+        </div>
+          <!-- End Card -->
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Articles -->
+
+
+
+
+
+
+
+
     <!-- Hero -->
-    <div class="container content-space-t-3">
+    <div class="container">
       <div class="row justify-content-lg-between align-items-lg-center">
         <div class="col-lg-5 mb-5 mb-lg-0">
           <div class="mb-5">
+          
+        
+            
             <h1 class="display-4 text-dark mb-5">Start your journey with <span class="text-primary">Unify</span></h1>
             <p class="fs-3">Feature-rich components and designed demo pages help you create the best possible products.</p>
           </div>
