--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -86,3 +86,50 @@
       </nav>
     </div>
   </header>
+
+
+
+    <!-- JS Plugins Init. template -->
+    <script>
+      (function() {
+        // INITIALIZATION OF NAVBAR
+        // =======================================================
+        new HSHeader('#header').init()
+  
+  
+        // INITIALIZATION OF MEGA MENU
+        // =======================================================
+        const megaMenu = new HSMegaMenu('.js-mega-menu', {
+          desktop: {
+            position: 'left'
+          }
+        })
+  
+  
+        // INITIALIZATION OF GO TO
+        // =======================================================
+        new HSGoTo('.js-go-to')
+  
+  
+        // INITIALIZATION OF SWIPER
+        // =======================================================
+        var swiper = new Swiper('.js-swiper-clients',{
+          slidesPerView: 2,
+          breakpoints: {
+            380: {
+              slidesPerView: 3,
+              spaceBetween: 15,
+            },
+            768: {
+              slidesPerView: 4,
+              spaceBetween: 15,
+            },
+            1024: {
+              slidesPerView: 5,
+              spaceBetween: 15,
+            },
+          },
+        });
+      })()
+    </script>
+  
