Connexion API ok

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,9 +6,7 @@
         <div class="col-md mb-3 mb-md-0">
           <!-- List -->
           <ul class="list-inline list-px-2 mb-0">
-            <li class="list-inline-item"><a class="link link-light link-light-75" href="#">Privacy and Policy</a></li>
-            <li class="list-inline-item"><a class="link link-light link-light-75" href="#">Terms</a></li>
-            <li class="list-inline-item"><a class="link link-light link-light-75" href="#">Status</a></li>
+            <li class="list-inline-item"><a class="link link-light link-light-75" routerLink="legal-mention">Mentions Légales</a></li>
           </ul>
           <!-- End List -->
         </div>
