--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -1,1 +1,29 @@
-<p>article-detail works!</p>
+<!-- Features -->
+<div class="container content-space-4">
+    <div class="row justify-content-lg-between align-items-lg-center content-space-1">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <img class="img-fluid rounded-3" src="../assets/img/950x950/img2.jpg" alt="Image Description">
+      </div>
+      <!-- End Col -->
+  
+      <div class="col-lg-8">
+        <div class="mb-5">
+          <h2>We tackle the challenges start-ups face</h2>
+          <p>Besides working with start-up enterprises as a partner for digitalization, we have built enterprise products for common pain points that we have encountered in various products and projects.</p>
+        </div>
+  
+        <!-- List Checked -->
+        <ul class="list-checked list-checked-soft-bg-primary list-checked-lg mb-5">
+          <li class="list-checked-item"><span class="fw-bold">Easy & fast</span> designing</li>
+          <li class="list-checked-item">Powerful <span class="fw-bold">features</span></li>
+          <li class="list-checked-item">User Experience Design</li>
+        </ul>
+        <!-- End List Checked -->
+  
+        <a class="btn btn-primary" href="#">Our services</a>
+      </div>
+      <!-- End Col -->
+    </div>
+    <!-- End Row -->
+  </div>
+  <!-- End Features -->
