--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
   <!-- ========== MAIN CONTENT ========== -->
   <main id="content" role="main">
-
-
-    <!-- Search -->
+    <!-- Search by title -->
     <div class="overflow-hidden content-space-t-2 ">
       <div class="container content-space-1">
         <div class="w-lg-50 text-center mx-lg-auto">
@@ -13,18 +11,23 @@
           </div>
           <!-- End Heading -->
 
-          <form (submit)="searchArticle()">
+          <form (submit)="searchArticle($event)">
             <div class="position-relative">
               <!-- Input Card -->
               <div class="input-card input-card-sm">
                 <div class="input-card-form">
                   <label for="searchForm" class="form-label visually-hidden">Quel livre cherchez-vous ?</label>
-                  <input type="text" class="form-control form-control-lg" placeholder="Quel livre cherchez-vous ?" aria-label="Quel livre cherchez-vous ?">
+                  <input type="text" class="form-control form-control-lg" list="datalistOptions" id="searchForm" placeholder="Quel livre cherchez-vous ?" aria-label="Quel livre cherchez-vous ?">
+                  <datalist id="datalistOptions">
+                    <div *ngFor="let item of article">
+                      <option value="{{ item.title }}">{{ item.title }}</option>
+                    </div>
+                  </datalist>
                 </div>
                 <button type="submit" class="btn btn-dark btn-lg"><i class="bi-search"></i></button>
               </div>
               <!-- End Input Card -->
-
+              
               <!-- SVG Shape -->
               <figure class="position-absolute top-0 end-0 d-none d-sm-block zi-n1 mt-n7 me-n10" style="width: 4rem;">
                 <img class="img-fluid" src="../assets/svg/components/pointer-up.svg" alt="Image Description">
@@ -41,9 +44,46 @@
         </div>
       </div>
     </div>
-    <!-- End Search -->
+    <!-- End Search by title -->
 
-    <!-- Articles -->
+    <!-- Articles by search -->
+    <div *ngIf="filteredArticle.length !== article.length">
+      <div class="container content-space-t-1">
+        <span class="divider-start mb-4">Votre recherche</span>
+        <div class="row row-cols-1 row-cols-sm-2 gx-7">
+          <div *ngFor="let item of filteredArticle">
+          <div class="col mb-7 mb-md-10">
+            <!-- Card -->      
+              <div class="row">
+                <div class="col-lg-5 mb-3 mb-lg-0">
+                  <img class="card-img" [src]="'data:image/png;base64,' + item.image" alt="Image Description">
+                </div>
+                <!-- End Col -->
+                <div class="col-lg-7">
+                  <h4>{{ item.title }}</h4>
+                <p class="card-text">{{ item.summary ? item.summary.substring(0, 50) + '...'  : "" }}</p>    
+                <p>Auteur : 
+                  <ng-container *ngFor="let author of item.bookAuthor">
+                    {{ author.lastname }} {{ author.firstname }} <br/>
+                  </ng-container>
+                </p>
+                  <p class="card-text">{{ item.unitPriceIncludingTaxes }} €</p>
+                    <a (click)="goToArticleDetail(item)"><span class="card-link">Détail article</span></a>
+                </div>
+                <!-- End Col -->
+              </div>
+              <!-- End Row -->
+          </div>
+            <!-- End Card -->
+          </div>
+          <!-- End Col -->
+        </div>
+        <!-- End Row -->
+      </div>
+    </div>
+    <!-- End Articles by search -->
+
+    <!-- Articles by sold -->
     <div class="container content-space-t-1">
       <span class="divider-start mb-4">Meilleurs ventes</span>
       <div class="row row-cols-1 row-cols-sm-2 gx-7">
@@ -52,7 +92,8 @@
           <!-- Card -->      
             <div class="row">
               <div class="col-lg-5 mb-3 mb-lg-0">
-                <img class="card-img" [src]="" alt="Image Description">
+                <img class="card-img" [src]="'data:image/png;base64,' + item.image" alt="Image Description">
+
               </div>
               <!-- End Col -->
               <div class="col-lg-7">
@@ -69,7 +110,6 @@
               <!-- End Col -->
             </div>
             <!-- End Row -->
-
         </div>
           <!-- End Card -->
         </div>
@@ -77,7 +117,47 @@
       </div>
       <!-- End Row -->
     </div>
-    <!-- End Articles -->
+    <!-- End Articles by sold -->
+
+    <!-- Search by author -->
+    <div class="overflow-hidden">
+      <div class="container content-space-1">
+        <div class="w-lg-50 text-center mx-lg-auto">    
+          <form (submit)="searchArticle($event)">
+            <div class="position-relative">
+              <!-- Input Card -->
+              <div class="input-card input-card-sm">
+                <div class="input-card-form">
+                  <label for="searchForm" class="form-label visually-hidden">Vous chercher un autheur ?</label>
+                  <input type="text" class="form-control form-control-lg" list="datalistOptions" id="searchForm" placeholder="Vous chercher un autheur ?" aria-label="Vous chercher un autheur ?">
+                  <datalist id="datalistOptions">
+                    <div *ngFor="let item of article">
+                      <option value="{{ item.title }}">{{ item.title }}</option>
+                    </div>
+                  </datalist>
+                </div>
+                <button type="submit" class="btn btn-dark btn-lg"><i class="bi-search"></i></button>
+              </div>
+              <!-- End Input Card -->
+              
+              <!-- SVG Shape -->
+              <figure class="position-absolute top-0 end-0 d-none d-sm-block zi-n1 mt-n7 me-n10" style="width: 4rem;">
+                <img class="img-fluid" src="../assets/svg/components/pointer-up.svg" alt="Image Description">
+              </figure>
+              <!-- End SVG Shape -->
+
+              <!-- SVG Shape -->
+              <figure class="position-absolute bottom-0 start-0 zi-n1 mb-n7" style="width: 12rem; margin-left: -10rem;">
+                <img class="img-fluid" src="../assets/svg/components/curved-shape.svg" alt="Image Description">
+              </figure>
+              <!-- End SVG Shape -->
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Search by author -->
+
   </main>
   <!-- ========== END MAIN CONTENT ========== -->
 
