--- a/src/app/components/article-detail/article-detail.component.html
+++ b/src/app/components/article-detail/article-detail.component.html
@@ -1,26 +1,36 @@
 <!-- Features -->
-<div class="container content-space-4">
+<div class="container content-space-4" *ngIf="article">
     <div class="row justify-content-lg-between align-items-lg-center content-space-1">
       <div class="col-lg-4 mb-5 mb-lg-0">
-        <img class="img-fluid rounded-3" src="../assets/img/950x950/img2.jpg" alt="Image Description">
+        <img class="img-fluid rounded-3" [src]="'data:image/png;base64,' + article.image" alt="Image Description">
       </div>
       <!-- End Col -->
   
       <div class="col-lg-8">
         <div class="mb-5">
-          <h2>We tackle the challenges start-ups face</h2>
-          <p>Besides working with start-up enterprises as a partner for digitalization, we have built enterprise products for common pain points that we have encountered in various products and projects.</p>
+          <h2>{{ article.title }}</h2>
+          <p>{{ article.summary }}</p>
         </div>
   
         <!-- List Checked -->
         <ul class="list-checked list-checked-soft-bg-primary list-checked-lg mb-5">
-          <li class="list-checked-item"><span class="fw-bold">Easy & fast</span> designing</li>
-          <li class="list-checked-item">Powerful <span class="fw-bold">features</span></li>
-          <li class="list-checked-item">User Experience Design</li>
+          <li class="list-checked-item"><span class="fw-bold">Editeur :</span> {{ article.bookEditor }}</li>
+
+          <li class="list-checked-item"><span class="fw-bold">Catégories : </span>
+            <ng-container *ngFor="let types of article.bookTypes">
+              {{ types }} 
+            </ng-container>
+          </li>
+
+          <li class="list-checked-item"><span class="fw-bold">Autheur : </span>
+              <ng-container *ngFor="let author of article.bookAuthor">
+                {{ author.lastname }} {{ author.firstname }} 
+              </ng-container>
+            </li> 
         </ul>
         <!-- End List Checked -->
   
-        <a class="btn btn-primary" href="#">Our services</a>
+        <a class="btn btn-primary" >Ajouter au panier</a>
       </div>
       <!-- End Col -->
     </div>
